--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,8 @@
   --footer-color: #e7e9fc;
   --hover-button: #404bbf;
   --modal-window: #fcfcfc;
+  --modal-form-label: #8e8f99;
+  --user-policy: #757575;
 }
 
 h1,
@@ -487,6 +489,80 @@ body {
 .footer-media-link:focus {
   background-color: #31d0aa;
 }
+.subscribe-footer-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.subscribe-footer-wrapper {
+  margin-left: 80px;
+}
+
+.subscribe-footer-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white-color);
+}
+
+.subscribe-footer-btn {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--white-color);
+  background-color: var(--logo-button-color);
+  cursor: pointer;
+  border-style: none;
+  border-radius: 4px;
+  width: 165px;
+  height: 40px;
+  padding: 8px 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.subscribe-footer-btn:hover,
+.subscribe-footer-btn:focus {
+  background-color: var(--hover-button);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.subscribe-footer-media-icon {
+  margin-left: 16px;
+}
+
+.subscribe-footer-input {
+  width: 264px;
+  height: 40px;
+  margin-right: 24px;
+  color: white;
+  background-color: transparent;
+  box-shadow: none;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  transform: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-footer-form {
+  display: flex;
+  flex-direction: row;
+  margin-top: 16px;
+}
+
+.subscribe-footer-input::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe-footer-input:focus {
+  outline: none;
+  border-color: var(--logo-button-color);
+}
 
 /*++++++++/FOOTER+++++++*/
 
@@ -499,7 +575,7 @@ body {
   z-index: 100;
   width: 100%;
   height: 100%;
-   opacity: 1;
+  opacity: 1;
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) visibility 250ms
     cubic-bezier(0.4, 0, 0.2, 1);
@@ -517,10 +593,11 @@ body {
   transform: translate(-50%, -50%);
   width: 408px;
   height: 576px;
+  padding: 72px 24px 24px 24px;
   background-color: var(--modal-window);
   position: absolute;
-   transform: translate(-50%, -50%)  scale(1);
-   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -552,7 +629,145 @@ body {
   fill: var(--white-color);
 }
 
-
 .backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%) scale(0.9);
+  transform: translate(-50%, -50%) scale(0.9);
+}
+
+/* +++++++++++/MODAL FORM+++++++++++ */
+
+.modal-form-title {
+  margin-bottom: 16px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 0.02;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 38px;
+  color: black;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-label-description {
+  display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.33;
+  color: var(--modal-form-label);
+  margin-bottom: 4px;
+}
+
+.modal-form-label {
+  margin-bottom: 8px;
+}
+
+.modal-form-input-wrapper {
+  position: relative;
+  display: block;
+}
+
+.modal-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translate(0, -50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus {
+  outline: none;
+  border-color: var(--logo-button-color);
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--logo-button-color);
+}
+
+.modal-form-textarea {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  padding: 8px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-textarea::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.33;
+}
+
+.modal-form-textarea:focus {
+  outline: none;
+  border-color: var(--logo-button-color);
+}
+.modal-form-check-description::before {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 16px;
+  border: 1.25px solid var(--second-color);
+  border-radius: 2px;
+  cursor: pointer;
+  margin-right: 8px;
+}
+
+.modal-form-check:checked + .modal-form-check-description::before {
+  background-color: var(--hover-button);
+  background-image: url(../images/checkbox.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.modal-form-check-description {
+  display: flex;
+  align-items: center;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  color: var(--user-policy);
+  margin-bottom: 24px;
+}
+
+.modal-form-label-textarea {
+  margin-bottom: 16px;
+}
+
+.modal-form-btn-submit {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--white-color);
+  background-color: var(--logo-button-color);
+  cursor: pointer;
+  border-style: none;
+  border-radius: 4px;
+  width: 169px;
+  height: 56px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 24px;
+  align-self: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-btn-submit:hover,
+.modal-form-btn-submit:focus {
+  background-color: var(--hover-button);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
