--- a/css/mobile.css
+++ b/css/mobile.css
@@ -52,7 +52,7 @@ body {
     width: 100%;
   padding-left: 15px;
   padding-right: 15px;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
 }
 
 @media screen and (min-width: 480px) {
@@ -127,6 +127,7 @@ body {
     background-color: transparent;
     
 }
+
 
 
 .mobile-menu-container-wrapper {
@@ -363,7 +364,21 @@ text-transform: capitalize;
 color: var(--white-color);
 }
 
-
+.modal-button {
+    font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+text-align: center;
+color: var(--white-color);
+    padding: 16px 32px;
+    background-color: var(--logo-button-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+cursor: pointer;
+border-style: none;
+}
 /* +++++++/HERO+++++ */
 
 
@@ -382,7 +397,7 @@ color: var(--white-color);
           padding-bottom: 108px;
     }
     .modal-button {
-        margin-top: 40px;
+                margin-top: 40px;
     }
     .hero-title {
         font-style: normal;
@@ -419,3 +434,231 @@ color: var(--white-color);
             }
             
 /* +++++++/HERO-DESKTOP+++++  */
+
+/* +++++++ADVANTAGES+++++++ */
+
+.hidden-title {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+  }
+
+
+  
+  .page-advantage-container {
+    padding-top: 96px;
+    padding-bottom: 96px;
+  }
+
+ 
+
+  .advantage-suptitle {
+    font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+text-align: left;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+color: var(--second-color);
+ margin-bottom: 8px;
+  }
+
+  .advantage-description {
+    font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: var(--contact-description-color);
+  }
+
+
+
+
+  @media screen and (max-width: 1199px) {
+    .advantage-icon {
+        display: none;
+      }
+    
+      .advantage-item:not(:last-child) {
+        margin-bottom: 72px;
+      }
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+.advantage-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+  .advantage-item {
+    width: calc((100% - 24px) / 2);
+
+  }
+
+  }
+
+  @media screen and (min-width: 1200px) {
+   .advantage-list {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .advantage-item:not(:last-child) {
+    gap: 24px;
+  }
+
+  .advantage-item {
+    width: calc((100% - 72px) / 4);
+  }
+
+.advantage-icon {
+    width: 100%;
+    background-color: var(--secondary-background-color);
+    text-align: center;
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
+.advantage-icon {
+    margin-bottom: 8px;
+}
+}
+
+
+/* ++++++++ABOUT+++++++ */
+.section-title {
+    margin-bottom: 72px;
+    font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+text-align: center;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+color: var(--second-color):
+}
+
+@media screen and (max-width: 1199px) {
+.activity {
+    display: none;
+}
+}
+
+@media screen and (min-width: 1200px) {
+    .activity-list {
+        display: flex;
+        justify-content: space-between;
+        gap: 24px;
+    }
+
+.activity-item:not(:last-child) {
+    gap: 24px;
+}
+
+    .activity-item {
+        width: calc((100% - 48px)) / 3;
+    }
+
+    .section-title {
+        text-align: center;
+        margin-bottom: 72px;
+    }
+    
+
+}
+
+/* ++++++++ABOUT+++++++ */
+
+
+
+/* ++++++++TEAM+++++++ */
+
+.team-section {
+    background-color: var(--secondary-background-color);
+}
+
+
+@media screen and (max-width: 1199px) {
+.team-section {
+    padding-top: 96px;
+    padding-bottom: 96px;
+}
+
+.team-list {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+
+
+.team-item:not(:last-child) {
+    margin-bottom: 72px;
+    
+}
+.team-text-wrapper{
+text-align: center;
+padding-top: 32px;
+padding-bottom: 32px;
+padding-left: 14.17px;
+padding-right: 14.18px;
+background-color: var(--white-color);
+}
+.team-title {
+    margin-bottom: 8px;
+}
+
+.description-section {
+    margin-bottom: 8px;
+}
+
+.social-media-list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.social-media-item {
+    width: 40px;
+    height: 40px;
+    background-color: var(--logo-button-color);
+    border-radius: 50%;
+    }
+
+
+   
+
+.social-media-link {
+    width: 100%;
+    height: 100%;
+   
+}
+
+.social-media-icon {
+    width: 16px;
+    height: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.social-media-icon:not(:last-child) {
+    gap: 24px;
+}
+
+@media screen and (min-width: 1200px) {
+    .team-section {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+}
