--- a/css/mobile.css
+++ b/css/mobile.css
@@ -6,13 +6,12 @@
     --secondary-background-color: #f4f4fd;
     --contact-description-color: #434455;
     --white-color: #ffffff;
-    --footer-color: #e7e9fc;
+    --footer-header-color: #e7e9fc;
     --hover-button: #404bbf;
     --modal-window: #fcfcfc;
     --modal-form-label: #8e8f99;
     --user-policy: #757575;
   }
-
 
   h1,
   h2,
@@ -39,27 +38,26 @@
 }
 .link {
     text-decoration: none;
+    display: block;
 }
-
 
 body {
     font-family: "Roboto", sans-serif;
     background-color: var(--white-color);
   }
 
-
 .container {
     width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
-    /* background-color: aquamarine; */
+    padding-left: 15px;
+    padding-right: 15px;
+    background-color: aquamarine;
 }
 
 @media screen and (min-width: 480px) {
     .container {
         width: 426px;
         margin-left: auto;
-  margin-right: auto;
+        margin-right: auto;
     }
 }
 
@@ -76,11 +74,12 @@ body {
 }
 /* +++++++++++++++++LOGO++++++++++++++++++ */
 
+  
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 800;
     font-size: 18px;
-    line-height: 1.33;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--second-color);
@@ -90,10 +89,24 @@ body {
     color: var(--logo-button-color);
   }
 
-/* +++++++++++++++++/LOGO++++++++++++++++++ */
 
+/* +++++++++++++++++LOGO-DESKTOP++++++++++++++++++ */
 
-.page-header-container {
+  @media screen and (min-width: 1199px) {
+    .logo {
+        line-height: 1.33;
+    }
+    
+  }
+
+  /* +++++++++++++++++HEADER+++++++++++++++++ */
+
+.header-section {
+    border-bottom: 1px solid var(--footer-header-color);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.page-header-wrapper {
     padding-top: 24px;
     padding-bottom: 24px;
 }
@@ -107,142 +120,135 @@ body {
     .contact-list {
         display: none;
     }
-.page-nav {
-    display: none;
-}
+    .page-nav {
+        display: none;
+    }
+        
+    .page-header-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        
+    }
+
+    .mobile-menu-open-btn {
+        width: 32px;
+        height: 22px;
+        border: none;
+        background-color: transparent;    
+    }
+
+    .mobile-menu-container-wrapper {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: var(--white-color);
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    }
+
+    .mobile-menu-container-wrapper.is-open {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+    }
     
-.page-header-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    .mobile-menu-container {
+        position: relative;
+        width: 100%;
+        padding-left: 40px;
+        padding-right: 60px;
+        padding-bottom: 40px;
+        padding-top: 80px;
+    }
+
+    .mobile-menu-close-btn {
+        position: absolute;
+        right: 40px;
+        top: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 24px;
+        height: 24px;
+        background-color: var(--footer-color);
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+        }
     
-}
+    .mobile-menu-list-link {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 284px;
+    }
 
+    .mobile-menu-item-link {
+        font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--second-color);
+    }
 
+    .mobile-menu-item-link:not(:last-child) {
+        margin-bottom: 40px;
+    }
 
-.mobile-menu-open-btn {
-    width: 32px;
-    height: 22px;
-    border: none;
-    background-color: transparent;
-    
-}
+    .mobile-menu-contacts-list {
+        margin-bottom: 48px;
+    }
 
-
-
-.mobile-menu-container-wrapper {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--white-color);
-    
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-}
-
-
-.mobile-menu-container-wrapper.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-
-}
-.mobile-menu-container {
-    position: relative;
-    width: 100%;
-    padding-left: 40px;
-    padding-right: 60px;
-       padding-bottom: 40px;
-       padding-top: 80px;
-}
-
-.mobile-menu-close-btn {
-    position: absolute;
-    right: 40px;
-    top: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 24px;
-    height: 24px;
-    background-color: var(--footer-color);
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
-     }
-  
-.mobile-menu-list-link {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 284px;
-}
-
-.mobile-menu-item-link {
-    font-weight: 700;
-font-size: 36px;
-line-height: 1.11;
-letter-spacing: 0.02em;
-text-transform: capitalize;
-color: var(--second-color);
-}
-
-.mobile-menu-item-link:not(:last-child) {
-    margin-bottom: 40px;
-}
-
-.mobile-menu-contacts-list {
-    margin-bottom: 48px;
-}
-
-.mobile-menu-contacts-tel {
-    font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 36px;
-line-height: 1.11;
-letter-spacing: 0.02em;
-text-transform: capitalize;
-margin-bottom: 40px;
-color: var(--logo-button-color);
-}
-
-.mobile-menu-contacts-mail {
+    .mobile-menu-contacts-tel {
+        font-family: 'Roboto';
     font-style: normal;
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-color: var(--contact-description-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    margin-bottom: 40px;
+    color: var(--logo-button-color);
+    }
 
-}
+    .mobile-menu-contacts-mail {
+        font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--contact-description-color);
 
-.mobile-menu-socialmedia-list {
-    display: flex;
-    justify-content: space-between;    
-}
+    }
 
-.mobile-menu-socialmedia-item {
-    width: 40px;
-    height: 40px;
-       background-color: var(--logo-button-color);
-    border-radius: 50%;
-}
+    .mobile-menu-socialmedia-list {
+        display: flex;
+        justify-content: space-between;    
+    }
 
-.mobile-menu-socialmedia-link {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;  
- }
+    .mobile-menu-socialmedia-item {
+        width: 40px;
+        height: 40px;
+        background-color: var(--logo-button-color);
+        border-radius: 50%;
+    }
 
-.mobile-menu-icon-instagram {
-    width: 24px;
-    height: 24px;
-}
+    .mobile-menu-socialmedia-link {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;  
+    }
+
+    .mobile-menu-icon-instagram {
+        width: 24px;
+        height: 24px;
+    }
 
 }
 
@@ -271,10 +277,11 @@ color: var(--contact-description-color);
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   
 
-    .page-header-container {
+    .page-header-wrapper {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding-bottom: 28px;
                   }
 
        .page-nav {
@@ -583,82 +590,128 @@ color: var(--second-color):
 
 /* ++++++++TEAM+++++++ */
 
-.team-section {
-    background-color: var(--secondary-background-color);
-}
 
-
-@media screen and (max-width: 1199px) {
 .team-section {
     padding-top: 96px;
     padding-bottom: 96px;
+    background-color: var(--secondary-background-color);
 }
 
 .team-list {
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
-}
-
-
-.team-item:not(:last-child) {
-    margin-bottom: 72px;
-    
-}
-.team-text-wrapper{
-text-align: center;
-padding-top: 32px;
-padding-bottom: 32px;
-padding-left: 14.17px;
-padding-right: 14.18px;
-background-color: var(--white-color);
-}
-.team-title {
-    margin-bottom: 8px;
-}
-
-.description-section {
-    margin-bottom: 8px;
-}
-
-.social-media-list {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
-}
+ }
 
-.social-media-item {
+
+    
+    .team-title {
+        margin-bottom: 8px;
+    }
+    .description-section {
+        margin-bottom: 8px;
+    }
+
+    .social-media-list {
+        display: flex;
+        align-items: center
+    }
+
+    .social-media-item:not(:last-child) {
+        margin-right: 24px;
+    }     
+    
+    .social-media-link {
+ display: block;
     width: 40px;
     height: 40px;
     background-color: var(--logo-button-color);
     border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     }
 
+    .team-text-wrapper{
+        text-align: center;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        background-color: var(--white-color);
+        text-align: center;
+        }
 
-   
+    @media screen and (max-width: 767px) {
+    .team-item:not(:last-child) {
+        margin-bottom: 72px;
+     }
+     .team-text-wrapper{
+        padding-left: 14.17px;
+        padding-right: 14.18px;
+               }
+ }
 
-.social-media-link {
-    width: 100%;
-    height: 100%;
-   
-}
 
-.social-media-icon {
-    width: 16px;
-    height: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-.social-media-icon:not(:last-child) {
-    gap: 24px;
-}
+  
+ @media screen and (min-width: 768px) {
+    
+    .team-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 64px 24px;
+           }
+
+      .team-text-wrapper {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+
+ }
+
 
 @media screen and (min-width: 1200px) {
     .team-section {
         padding-top: 120px;
         padding-bottom: 120px;
     }
+} 
+
+/* ++++++++/TEAM+++++++ */
+
+/* ++++++++CUSTOMERS+++++++ */
+
+.section-customers {
+    padding-top: 96px;
+    padding-bottom: 96px;
+    background-color: var(--white-color);
+}
+
+@media screen and (max-width: 767px) {
+
+.clients-list {
+    display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   gap: 72px 16px;
+}
+
+
+.clients-item {
+    width: calc((100% - 16px) / 2);
+          }
+
+
+
+.clients-item-link {
+    display: block;  
+    padding: 16px 40px;
+    border: 1px solid #8E8F99;
+border-radius: 4px;
+width: 100%;
+
+
+
+}
 }
