--- a/css/mobile.css
+++ b/css/mobile.css
@@ -54,7 +54,7 @@ body {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    background-color: aquamarine;
+    background-color: brown;
 }
 
 @media screen and (min-width: 768px) {
@@ -744,28 +744,24 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
 
 /* ++++++CUSTOMERS-TABLET+++++++ */
 
-@media screen and (min-width: 768px) {
-    .section-customers {
-        padding-left: 108px;
-        padding-right: 108px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+
+    .clients-icon {
+        width: 104px;
     }
 
     .clients-list {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        gap: 72px 24px;
+        column-gap: 24px;
     }
 
     .clients-item {
         width: calc((100% - 48px) / 3);
     }
 
-    .clients-icon {
-        width: 104px;
-        height: 56px;
-        
-}
+    .section-customers div {
+        padding-left: 108px;
+        padding-right: 108px;
+    }
 }
 
 /* +++++++CUSTOMERS-DESKTOP+++++++ */
@@ -775,6 +771,12 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
             padding-top: 120px;
             padding-bottom: 120px;
         }
+
+    .clients-list {
+        display: flex;
+        justify-content: space-around;
+        column-gap: 24px;
+    }
 
     .clients-item-link {
             display: flex;
@@ -790,26 +792,11 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
 
 /* +++++++++FOOTER+++++++++ */
 
+
 .footer-section {
     padding-top: 96px;
     padding-bottom: 96px;
     background-color: var(--second-color)
-}
-
-.footer-wrapper-common {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 72px;
-}
-
-.footer-wrapper-logo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 16px;
 }
 
 .logo-footer {
@@ -827,6 +814,16 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     color: var(--logo-button-color);
 }
 
+.subtitle-footer {
+    margin-bottom: 16px;
+}
+
+.footer-wrapper-logo {
+    display: flex;
+    flex-direction: column;
+    
+}
+
 .footer-text {
     font-style: normal;
     font-weight: 400;
@@ -841,7 +838,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 16px;
+    margin-bottom: 72px;
 }
 
 .footer-media-text,
@@ -881,68 +878,99 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     height: 24px;
 }
 
-.footer-wrapper-subscribe {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 16px;
-}
-
-.subscribe-footer-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 16px;
-}
-
 .subscribe-footer-input {
-    width: 396px;
-    height: 40px;
-    left: 16px;
-    top: 4764px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    background-color: transparent;
-    color: var(--white-color);
+        width: 396px;
+        height: 40px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        border-radius: 4px;
+        background-color: transparent;
+        color: var(--white-color);
 }
 
 .subscribe-footer-input::placeholder {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 2;
-    color: rgba(255, 255, 255, 0.6);
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 2;
+        color: rgba(255, 255, 255, 0.6);
 }
-
+        
 .subscribe-footer-btn {
-    width: 165px;
-    height: 40px;
-    padding: 8px 24px;
-    background-color: var(--logo-button-color);
-    border-radius: 4px;
-    color: var(--white-color);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: none;
-    border: none;
+        width: 165px;
+        height: 40px;
+        padding: 8px 24px;
+        background-color: var(--logo-button-color);
+        border-radius: 4px;
+        color: var(--white-color);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        box-shadow: none;
+        border: none;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 767px) {
+    .footer-wrapper-common {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+    .footer-wrapper-logo {
+        align-items: center;
+        justify-content: center;
+        padding-left: 65px;
+        padding-right: 65px;
+        margin-bottom: 72px;
+    }
+
+    .footer-wrapper-subscribe {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: blue;
+    }
+
+    .subscribe-footer-form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+    } 
+}
+
+/* +++++++++FOOTER-TABLET++++++++ */
+
+ @media screen and (min-width: 768px) {
 
     .footer-wrapper-common {
+        padding-left: 93px;
+        padding-right: 149px;    
+        background-color: green;
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+    }  
+
+    .footer-wrapper-logo {
+        width: 264px;
+        justify-content: flex-start;
+        margin-right: 24px;
+    }
+
+    .subscribe-footer-input {
+        width: 264px;
+    }
+
+    .subscribe-footer-form {
+        display: flex;
+        flex-direction: row;
         align-items: center;
-        background-color: pink;
-    }
-
-    
-    }
-
-
-} 
+        justify-content: flex-start;
+        gap: 24px;
+}   
