--- a/css/mobile.css
+++ b/css/mobile.css
@@ -833,14 +833,6 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
     color: var(--footer-header-color);
 }
 
-.footer-wrapper-socialmedia {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 72px;
-}
-
 .footer-media-text,
 .subscribe-footer-title {
     font-style: normal;
@@ -879,7 +871,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
 }
 
 .subscribe-footer-input {
-        width: 396px;
+        width: 100%;
         height: 40px;
         border: 1px solid rgba(255, 255, 255, 0.3);
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -926,12 +918,21 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
         margin-bottom: 72px;
     }
 
+    .footer-wrapper-socialmedia {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 72px;
+}
+
     .footer-wrapper-subscribe {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         background-color: blue;
+        width: 100%;
     }
 
     .subscribe-footer-form {
@@ -940,6 +941,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
         align-items: center;
         justify-content: center;
         gap: 16px;
+        width: 100%;
     } 
 }
 
@@ -973,4 +975,259 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
         align-items: center;
         justify-content: flex-start;
         gap: 24px;
-}   
+    } 
+}
+
+@media screen and (min-width: 1200px) {
+    .footer-wrapper-common {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .footer-wrapper-logo {
+        margin-right: 120px;
+    }
+
+    .footer-wrapper-socialmedia {
+        margin-right: 80px;
+    }
+}
+
+/* ++++++MODAL+++++++ */
+
+    
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) visibility 250ms
+    cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+top: 60%;
+left: 50%;
+ width: 92%;
+  padding: 72px 16px 24px;
+max-width: 392px;
+    min-height: 586px;
+   background-color: var(--modal-window);
+  position: absolute;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn {
+    position: absolute;
+    right: 24px;
+    top: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    background-color: var(--footer-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-title {
+    margin-bottom: 16px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+    line-height: 1.5;
+    color: var(--second-color);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+    background-color: var(--hover-button);
+}
+
+.modal-close-btn-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:hover .modal-close-btn-icon,
+.modal-close-btn:focus .modal-close-btn-icon {
+    fill: var(--white-color);
+}
+
+.modal-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    margin-top: 16px;
+}
+
+.modal-form-input {
+    width: 100%;
+    height: 40px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 34px;
+  color: black;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.9);
+}
+
+/* +++++++++++/MODAL FORM+++++++++++ */
+
+
+
+
+.modal-form-label-description {
+  display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.33;
+  color: var(--modal-form-label);
+  margin-bottom: 4px;
+}
+
+.modal-form-label {
+  margin-bottom: 8px;
+}
+
+.modal-form-input-wrapper {
+  position: relative;
+  display: block;
+}
+
+.modal-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translate(0, -50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus {
+  outline: none;
+  border-color: var(--logo-button-color);
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--logo-button-color);
+}
+
+.modal-form-textarea {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  padding: 8px 16px;
+  margin-bottom: 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-textarea::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.33;
+}
+
+.modal-form-textarea:focus {
+  outline: none;
+  border-color: var(--logo-button-color);
+}
+.modal-form-check-description::before {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 16px;
+  border: 1.25px solid var(--second-color);
+  border-radius: 2px;
+  cursor: pointer;
+  margin-right: 8px;
+}
+
+.modal-form-check:checked + .modal-form-check-description::before {
+  background-color: var(--hover-button);
+  background-image: url(../images/checkbox.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.modal-form-check-description {
+  display: flex;
+  align-items: center;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  color: var(--user-policy);
+  margin-bottom: 24px;
+}
+
+.modal-form-btn-submit {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--white-color);
+  background-color: var(--logo-button-color);
+  cursor: pointer;
+  border-style: none;
+  border-radius: 4px;
+  width: 169px;
+  height: 56px;
+  margin-left: auto;
+  margin-right: auto;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-btn-submit:hover,
+.modal-form-btn-submit:focus {
+  background-color: var(--hover-button);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.policy-link {
+  color: var(--logo-button-color);
+}
+
+
+/* +++++MODAL-TABLET+++++ */
+@media screen and () {
+    
+}
+
+.modal {
+    top: 60%;
+    left: 50%;
+    width: 92%;
+    max-width: 408px;
+    min-height: 584px;
+    padding: 72px 16px 24px;
+    background-color: var(--modal-window);
+    position: absolute;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
